--- a/accounts/templates/invite_patient_email.html
+++ b/accounts/templates/invite_patient_email.html
@@ -3,7 +3,7 @@ Hi,
 
 Please click on the link below to register with us:
 
-http://{{ domain }}{% url 'patient-signup-with-invite' uidb64=uid token=token %}
+https://{{ domain }}{% url 'patient-signup-with-invite' uidb64=uid token=token %}
 
 This is an automatic email, please do not reply to it.
 {% endautoescape %}
